# Daily-Expense-Tracker

./: README.md  data_entry.py  finance_data.csv  main.py  makefile  pyproject.toml
