[project]
name = "daily-expense-tracker"
version = "0.1.0"
description = "daily expense/income tracker using python, pandas and matplotlib"
authors = [
    {name = "dineshd30",email = "dinesh.lawate@salecycle.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
]
